--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -403,3 +403,37 @@ section img {
   footer {
     width: 95%;
   }
+ 
+
+  .cta-section {
+    background-color: #007bff;
+    color: white;
+    padding: 40px;
+    text-align: center;
+    border-radius: 8px;
+    margin: 0 auto 25px;
+  }.
+
+  .cta-section h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+  }
+  .cta-section p{
+    font-size: 18px;
+    max-width: 600px;
+    margin: 0 auto 25px;
+  }
+
+  .cta-section button {
+    background-color: white;
+    color: #007bff;
+    padding: 12px 24px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 4px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  .cta-button:hover {
+    background-color: #0056b3;
+    color: white;
+  }
